Fix word-wrapping for references

--- a/src/templates/template.css
+++ b/src/templates/template.css
@@ -85,6 +85,11 @@ input:focus {
   margin-right: 10px;
 }
 
+.reference-content {
+  width: calc(100% - 31px);
+  word-break: break-all;
+}
+
 .keyword-link {
   color: white;
   background-color: #1e2026;
